tests/NormalTests/paczka1/fuzzy1/51919427.err
Error in line 1: QF5wGUVk S236 81,0
Error in line 6: DJeHu S4 42,6
Error in line 18: S4 S236 30,9
Error in line 19: S4 S236 35,2
Error in line 14: DJeHu A853 42,8
Error in line 30: PTQu S236 21,6
Error in line 33: PTQu S4 45,3
Error in line 37: S4 A853 65,9
Error in line 40: S4 A853 229,3
